<resources>
    <string name="app_name">Multi Language App</string>
    <string name="hello">Welcome!</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="no_account">Don\'t have account? Sign Up</string>
    <string name="vi">Tiếng Việt</string>
    <string name="en">English</string>
    <string name="fr">Français</string>
</resources>